webpage icon added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepiniera Dzwieku</title>
+    <link rel="icon" href="images/icon.png">
     <meta property="og:image" content="images/share.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -25,7 +25,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
 </head>
-
 <body class="body">
     <h2 class="pepinieraMeaning">Pepiniera - «środowisko, z którego wywodzi się wielu utalentowanych ludzi»
     </h2>
@@ -68,7 +67,6 @@
                             o
                             własne programy artystyczne.</li>
                     </ul>
-
                 </div>
                 <h3 class="article__title">Łukasz Forest Piechota</h3>
                 <p class="article__subTitle"><strong>Pianista, improwizator, aranżer, kompozytor,
@@ -87,7 +85,6 @@
                             o
                             własne programy artystyczne</li>
                     </ul>
-
                 </div>
             </article>
         </section>
