letter bug repeared

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <td class="table__cell">Brak</td>
                 </tr>
                 <tr class="table__row">
-                    <th class="table__cell table__cell--header" scope="row" rowspan="2">Młodza Akademia Artystyczna</th>
+                    <th class="table__cell table__cell--header" scope="row" rowspan="2">Młoda Akademia Artystyczna</th>
                     <td class="table__cell">Poniedziałek</td>
                     <td class="table__cell">10:30-19:45</td>
                     <td class="table__cell">1</td>
